Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h
@@ -118,6 +118,10 @@ public:
     virtual bool supportsAcceleratedRendering() const override { return true; }
 #endif
 
+#if USE(GSTREAMER_GL)
+    virtual PassNativeImagePtr nativeImageForCurrentTime();
+#endif
+
 protected:
     MediaPlayerPrivateGStreamerBase(MediaPlayer*);
     virtual GstElement* createVideoSink();
